# CppMatrix

./: CMakeLists.txt  README.md  main.cpp
include/: matrix.hpp
lib/: matrix.cpp
src/: matrix.cpp
test/: test.cpp
tests/: CMakeLists.txt
